--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     ],
     "require": {
         "php": "^8.0.1",
+        "guzzlehttp/guzzle": "^7.4",
         "illuminate/support": "^9.0"
     },
     "require-dev": {
